	pmlogger, pmproxy: support for a remote archive push webhook;
	  providing central logging without server-side configuration
	pmproxy_daily: new daily script for pmlogger-pushed archives
	pmproxy: support both OpenMetrics and OpenTelemetry /metrics
	pmproxy: configurable HTTP headers (e.g. X-Grafana-Device-ID)
	pmlogger_daily: default compression is a dynamic zst/xz choice
    - libpcp, libpcp_pmda, libpcp_mmv, libpcp_web and language bindings:
	libpcp.so.4: default PMAPI supports nanosecond precision times
	libpcp.so.3: provides backwards compatible libpcp interfaces
	pmapi.h: backwards compatible APIs via -DPMAPI_VERSION=2|4
	libpcp: flag for pmproxy to open archives at the last volume
	libpcp_import: protect against a second call to pmiEnd
	python api: fix (de)reference of a tuple in refresh callback
	python api: removed python version 2 support, 3.6 is minimum
    - Client tools and utilities:
	pcp-rocestat: client to report NVIDIA RoCE metrics
	pcp-dstat: fix the --time-adv option with archives
	pcp-htop: sync-up with latest htop.dev code fixes
	pcp-htop: improve pmcd disconnect/restart handling
	pmrep: fix iostat merge percentage formulas
	pmrep: allow for not preserving discrete metric values
	pmlogpush: new tool for pushing existing archives to pmproxy
	pcp2opentelemetry: new tool exporting to OpenTelemetry format
	pmseries_import: new tool for archive analysis container
	archive analysis container: removed rebuild of PCP sources
	archive analysis container: refactored to use real packages
	archive analysis container: set Grafana time window from archive
    - Build, infrastructure and packaging updates:
	build: removed Qt4 support from code base, 5.6 is minimum
	build: various improvements for reproducible builds
	build: archive-analysis container reworked to use packages
	build: fixes to better support parallel building
	build: fix multilib installs for pcp-libs-devel packages
	build: provide libvirt PMDA on any el7 if py3 modules exist