@@ -6,35 +6,6 @@
 
 <service_bundle type='manifest' name='pcp'>
 
-<service name='application/pcp/pcp' type='service' version='1'>
-	<create_default_instance enabled='false' />
-	<single_instance />
-	<dependency name='root' grouping='require_all' restart_on='none'
-	    type='service'>
-		<service_fmri value='svc:/system/filesystem/local:default'/>
-		<service_fmri value='svc:/milestone/network:default'/>
-	</dependency>
-	<exec_method type='method' name='start' exec='/etc/init.d/pcp start'
-	    timeout_seconds='60' />
-	<exec_method type='method' name='stop' exec='/etc/init.d/pcp stop'
-	    timeout_seconds='60' />
-	<property_group name='startd' type='framework'>
-	    <propval name='ignore_error' type='astring' value='core' />
-	</property_group>
-	<stability value='Unstable' />
-	<template>
-		<common_name>
-			<loctext xml:lang='C'>
-				Performance Co-Pilot Legacy scripts
-			</loctext>
-		</common_name>
-		<documentation>
-			<manpage title='pcpinfo' section='1'
-				manpath='/usr/share/man' />
-		</documentation>
-	</template>
-</service>
-
 <service name='application/pcp/pmcd' type='service' version='1'>
 	<create_default_instance enabled='false' />
 	<single_instance />
