@@ -191,7 +191,7 @@ are maintained in the directory
 (this is where the default
 .B pmlogger
 start-up script in
-.I $PCP_RC_DIR/pcp
+.I $PCP_RC_DIR/pmlogger
 will create the archives), while archives for the remote host
 .I mumble
 are maintained in
