@@ -1,6 +1,6 @@
 #! /bin/sh
 # PCP QA Test No. 170
-# Test $PCP_RC_DIR/pcp script pmcd log location
+# Test $PCP_RC_DIR/pmcd script pmcd log location
 #
 # Copyright (c) 1995-2002 Silicon Graphics, Inc.  All Rights Reserved.
 #
