@@ -113,7 +113,8 @@ echo "pmcd with PMCD_PORT=$PMCD_PORT, pmlogger with PMLOGGER_PORT=$PMLOGGER_PORT
 #
 echo "export PMCD_PORT=$PMCD_PORT" >$tmp.start
 echo "export PMLOGGER_PORT=$PMLOGGER_PORT" >>$tmp.start
-echo "$PCP_RC_DIR/pcp restart" >>$tmp.start
+echo "$PCP_RC_DIR/pmcd restart" >>$tmp.start
+echo "$PCP_RC_DIR/pmlogger restart" >>$tmp.start
 
 $sudo sh $tmp.start 2>&1 | _filter_pcp_start
 _wait_for_pmlogger -P $LOGGING_DIR/$LOCALHOST/pmlogger.log || _exit 1
