@@ -473,13 +473,22 @@ if [ -f pcp-$buildversion/build/sun/pcp-$src_version ]
 then
     : pmcd started above
 else
-    if sudo $PCP_RC_DIR/pcp start >$tmp.out 2>&1
+    if sudo $PCP_RC_DIR/pmcd start >$tmp.out 2>&1
     then
 	cat $tmp.out >>$HOME/daily.log
 	echo "Info: pmcd started" | tee -a $HOME/daily.log
     else
 	cat $tmp.out >>$HOME/daily.log
 	echo "Error: pmcd start failed" | tee -a $HOME/daily.log
+	exit 1
+    fi
+    if sudo $PCP_RC_DIR/pmlogger start >$tmp.out 2>&1
+    then
+	cat $tmp.out >>$HOME/daily.log
+	echo "Info: pmlogger started" | tee -a $HOME/daily.log
+    else
+	cat $tmp.out >>$HOME/daily.log
+	echo "Error: pmlogger start failed" | tee -a $HOME/daily.log
 	exit 1
     fi
 fi
